--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@discordjs/voice": "^0.17.0",
     "discord.js": "^14.16.2",
     "ffmpeg-static": "^5.2.0",
-    "sodium-native": "^4.2.0"
+    "sodium-native": "^4.2.0",
+    "ytdl-core": "^4.11.5"
   }
 }
